--- a/Practice_2020/JS-09-10/css/jquery.selectBox.css
+++ b/Practice_2020/JS-09-10/css/jquery.selectBox.css
@@ -50,7 +50,7 @@
     right: 0;
     width: 23px;
     height: 100%;
-    background: url(jquery.selectBox-arrow.gif) 50% center no-repeat;
+    background: url('../img/jquery.selectBox-arrow.gif') 50% center no-repeat;
     border-left: solid 1px #BBB;
 }
 
