JS-19. Added Carousel

--- a/Practice_2020/JS-19/app/styles/sass/wrapper.scss
+++ b/Practice_2020/JS-19/app/styles/sass/wrapper.scss
@@ -16,6 +16,10 @@
     padding-bottom: 40px;
   }
 
+  &__carousel {
+    @extend %justify_center;
+
+  }
 
   &__footer {
     @extend %justify_center;
