JS-19. Added Feachers

--- a/Practice_2020/JS-19/app/styles/sass/_templates.scss
+++ b/Practice_2020/JS-19/app/styles/sass/_templates.scss
@@ -1,3 +1,6 @@
+@import "variables";
+
+
 %justify_space-between {
   display: flex;
   justify-content: space-between;
@@ -6,4 +9,13 @@
 %justify_center {
   display: flex;
   justify-content: center;
+}
+
+%link{
+  text-decoration: none;
+}
+
+
+%link:hover{
+  color: $hoverLinkColor;
 }
