--- a/Practice_2020/JS-19/app/styles/sass/carousel.scss
+++ b/Practice_2020/JS-19/app/styles/sass/carousel.scss
@@ -1,6 +1,13 @@
 @import "variables";
-@import "templates";
 
 .carousel {
-    //@extend %justify_center;
+  position: relative;
+
+
+  &__slogan {
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+    width: 20%;
+  }
 }
