--- a/Practice_2020/JS-19/app/styles/sass/style2s.scss
+++ b/Practice_2020/JS-19/app/styles/sass/style2s.scss
@@ -3,3 +3,21 @@
 .container {
   width: $width;
 }
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+
+.text {
+  font: {
+    family: Arial, sans-serif;
+      size: $paragraphTextSize;
+  }
+  color: $paragraphTextColor;
+  text-align: justify;
+}
