Added Main block

--- a/Practice_2020/JS-19/app/styles/sass/_templates.scss
+++ b/Practice_2020/JS-19/app/styles/sass/_templates.scss
@@ -11,11 +11,15 @@
   justify-content: center;
 }
 
-%link{
-  text-decoration: none;
-}
 
-
-%link:hover{
-  color: $hoverLinkColor;
+%text__restrict{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -moz-box;
+  -moz-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
+  box-orient: vertical;
 }
