--- a/Practice_2020/JS-19/app/styles/sass/features.scss
+++ b/Practice_2020/JS-19/app/styles/sass/features.scss
@@ -1,12 +1,73 @@
 @import "variables";
 @import "templates";
 
+%features__icon {
+  width:  32px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-image:  url('../img/dist/article-icons.svg');
+}
+
 .features {
   @extend %justify_space-between;
   max-height: 200px;
 
 
-  &__article:not(:first-child) {
+
+
+  &__item {
+    display: flex;
+    color: #2a2b2e;
+  }
+
+  &__item:not(:first-child) {
     margin-left: 2vw;
   }
-}
+
+
+    &__number {
+    opacity: 0.102;
+    }
+
+
+    &__body {
+      margin-left: 2vw;
+    }
+
+
+      &__icon_settings{  @extend %features__icon;  background-position: -74px 0; }
+      &__icon_params  {  @extend %features__icon;  background-position: -37px 0; }
+      &__icon_truck   {  @extend %features__icon;  background-position:     0 0; }
+
+
+      &__name{
+        margin-top:    0.75em;
+        margin-bottom:    2em;
+
+        text-transform: capitalize;
+        white-space: nowrap;
+      }
+
+
+      &__text{
+        @extend %text__restrict;
+        margin-bottom: 2em;
+      }
+
+
+      &__link{
+
+        &::after{
+          margin-left: 1em;
+          content: '\2192';
+          color: $hoverLinkColor;
+        }
+
+
+        &:hover::after{
+          color: #2a2b2e;
+        }
+
+      }
+
+  }
