--- a/Practice_2020/JS-19/app/styles/sass/carousel.scss
+++ b/Practice_2020/JS-19/app/styles/sass/carousel.scss
@@ -1,13 +1,11 @@
 @import "variables";
 
 .carousel {
-  position: relative;
-
 
   &__slogan {
     position: absolute;
-    bottom: 0;
-    left: 15%;
-    width: 20%;
+    bottom: 15%;
+    left:    5%;
+    width:  20%;
   }
 }
