--- a/Practice_2020/JS-19/app/styles/sass/header-nav/header-nav.scss
+++ b/Practice_2020/JS-19/app/styles/sass/header-nav/header-nav.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "templates";
+@import "app/styles/sass/variables";
+@import "app/styles/sass/templates";
 
 
 .header-nav {
