--- a/Practice_2020/JS-19/app/styles/sass/main-nav.scss
+++ b/Practice_2020/JS-19/app/styles/sass/main-nav.scss
@@ -1,5 +1,5 @@
-@import "app/styles/sass/variables";
-@import "app/styles/sass/templates";
+@import "variables";
+@import "templates";
 
 
 .main-nav {
