--- a/Practice_2020/JS-19/app/styles/sass/header-nav.scss
+++ b/Practice_2020/JS-19/app/styles/sass/header-nav.scss
@@ -1,5 +1,5 @@
-@import "app/styles/sass/variables";
-@import "app/styles/sass/templates";
+@import "variables";
+@import "templates";
 
 
 .header-nav {
@@ -7,5 +7,4 @@
 
   align-items: center;
   background: $backgroundColor;
-
 }
